# mushroom-site

./: README.md  app.py  db_operations.py  db_setup.py  kaavio.md  main.py  pyproject.toml  readme.md  routes.py  tasks.py
Documentation/: kaavio.md  todo.md
mushroom_app/: app.py  db_operations.py  db_setup.py  db_setup_old.py  routes.py
mushroom_app/templates/: account_page.html  accounts.html  add_family.html  add_mushroom.html  add_sighting.html  families.html  family_page.html  layout.html  mushroom_page.html  mushrooms.html  seasons.html  sighting_page.html  sightings.html  statistics.html
templates/: add_mushroom.html  add_sighting.html  documents.html  families.html  forum.html  index.html  layout.html  mushrooms.html  seasons.html  sightings.html
